[package]
name = "transmission-rss"
description = "A simple binary to add RSS torrent items to transmission"
version = "0.3.2"
edition = "2021"
keywords = ["rss", "transmission", "torrent"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
kv = { git = "https://github.com/karimElmougi/kv.git" }
log = "0.4.17"
pretty_env_logger = "0.4"
reqwest = { version = "0.11" }
rss = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
transmission-rpc = { version = "0.4", features = ["sync"] }
url = { version = "*", features = ["serde"] }

[dev-dependencies]
httpmock = "0.6.6"
tokio-test = "0.4.2"

[profile.release]
lto = true
codegen-units = 1
