[package]
name = "transmission-rss"
description = "A simple binary to add RSS torrent items to transmission"
version = "0.3.2"
edition = "2021"
keywords = ["rss", "transmission", "torrent"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1"
futures = "0.3"
kv = { git = "https://github.com/karimElmougi/kv.git" }
log = "0.4"
home = "0.5"
pretty_env_logger = "0.5"
reqwest = { version = "0.12" }
rss = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
transmission-rpc = { version = "0.4", features = ["sync"] }
url = { version = "2", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
